# GHXTox

./: .gitignore  2025PeptiTox.docx  2025ToxMSRC.docx  2025ToxiPep.docx  BOOTSTRAP_RESULTS.md  EXPERIMENT_LOG.md  Jiao, S., Ye, X., Sakurai, T. et al. Integration of pre-trained protein language models with equivariant graph neural networks for peptide toxicity prediction. BMC Biol 23, 229 (2025)..docx  MULTISEED_RESULTS.md  NEXT_STEPS.md  README.md  RESULTS.md  SEQUENCE_SIMILARITY_RESULTS.md  pyproject.toml  requirements.txt
.codex_tmp/2026JCIM/: paper.md
configs/: 3d_v2_default_refit.json  chemical_site_interaction_final.json  chemical_site_interaction_pareto.json  chemical_site_interaction_pareto_same_residue.json  conformer_ensemble_residual_calibrated.json  default.json  default_3d_v1.json  default_groupfold_control.json  default_toxpltc_hybrid.json  plm_fusion_esm2_geometry_confidence_seed123.json  plm_fusion_esm2_geometry_confidence_seed2025.json  plm_sequence_atom_cross_attention.json  sequence_1d_bilstm.json  sequence_1d_bilstm_nested.json  sequence_1d_bilstm_seed123.json  sequence_1d_bilstm_seed2025.json
data/pepflow_pilot/: train_pilot_250.csv  train_pilot_250.fasta
reports/figures/: figure_metadata.json
runs/3d_v1_control_oof/: summary.json
runs/3d_v2_conformer_ensemble_candidate/: config.json  history.json
runs/3d_v2_conformer_prott5_frozen_oof/: metrics.json
runs/3d_v2_default/: config.json  decision.json  default_entry_smoke_metrics.json  fallback_smoke_metrics.json  history.json  oof_summary.json  test1_metrics.json  test2_metrics.json
runs/3d_v2_prott5_global_mcc/: decision.json  paired_vs_3d_v2.json
runs/3d_v2_prott5_global_mcc_oof/: summary.json
runs/bootstrap_ci/: test1_multiseed.json  test1_sequence_bilstm_multiseed.json  test2_multiseed.json  test2_sequence_bilstm_multiseed.json
runs/chemical_site_ablation_include_same_residue_fold0/: config.json  history.json
runs/chemical_site_ablation_include_same_residue_fold1/: config.json  history.json
runs/chemical_site_ablation_include_same_residue_fold2/: config.json  history.json
runs/nested_p1/: summary.json
scripts/: generate_prott5_pooled_autodl.sh  generate_prott5_tokens_autodl.sh
tests/: test_biological_interpretation.py  test_conformer_cache.py  test_conformer_ensemble_eval.py  test_conformer_features.py  test_hybrid_default.py  test_nested_folds.py  test_nonnegative_stacking.py  test_oof_fusion.py  test_paper_validation.py  test_pepflow_batch.py  test_peptide_topology_audit.py  test_plm_textcnn.py  test_probability_pipeline.py  test_prott5_tokens.py  test_select_conformer_pilot.py  test_selective_3d_gate.py  test_smoke.py  test_triroute.py
(+283 files in other folders)
